// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`contact notes icon and prompt are shown if no notes 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentInset={
      Object {
        "bottom": 90,
      }
    }
    scrollEventThrottle={0.0001}
    style={
      Object {
        "flex": 1,
        "marginBottom": undefined,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Array [
              Object {
                "backgroundColor": "#ffffff",
              },
              Object {
                "marginTop": 20,
              },
            ],
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../assets/images/myNotes.png",
            }
          }
          style={
            Object {
              "flexShrink": 1,
            }
          }
        />
        <Text
          style={
            Object {
              "color": "#007398",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 24,
              "fontStyle": "normal",
              "lineHeight": 24,
              "paddingTop": 10,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          MY NOTES
        </Text>
        <Text
          style={
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "lineHeight": 24,
              "paddingHorizontal": 80,
              "paddingVertical": 10,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Remember important details about Roger, like favorite food, hobbies they love or something interesting they said.
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#3CC8E6",
          "borderRadius": 50,
          "height": 48,
          "justifyContent": "center",
          "opacity": 1,
          "width": 650,
        }
      }
      testID="bottomButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Bold",
              "fontSize": 14,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Array [
              undefined,
            ],
          ]
        }
      >
        ADD PRIVATE NOTES
      </Text>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`contact notes icon and prompt are shown if no notes as me 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentInset={
      Object {
        "bottom": 90,
      }
    }
    scrollEventThrottle={0.0001}
    style={
      Object {
        "flex": 1,
        "marginBottom": undefined,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Array [
              Object {
                "backgroundColor": "#ffffff",
              },
              Object {
                "marginTop": 20,
              },
            ],
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <Image
          resizeMode="contain"
          source={
            Object {
              "testUri": "../../../assets/images/myNotes.png",
            }
          }
          style={
            Object {
              "flexShrink": 1,
            }
          }
        />
        <Text
          style={
            Object {
              "color": "#007398",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 24,
              "fontStyle": "normal",
              "lineHeight": 24,
              "paddingTop": 10,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          MY NOTES
        </Text>
        <Text
          style={
            Object {
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "lineHeight": 24,
              "paddingHorizontal": 80,
              "paddingVertical": 10,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Remember important details about your life or spiritual journey, like important milestones, influential people, or things you are learning about God.
        </Text>
      </View>
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#3CC8E6",
          "borderRadius": 50,
          "height": 48,
          "justifyContent": "center",
          "opacity": 1,
          "width": 650,
        }
      }
      testID="bottomButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Bold",
              "fontSize": 14,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Array [
              undefined,
            ],
          ]
        }
      >
        ADD PRIVATE NOTES
      </Text>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`contact notes notes are shown 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentInset={
      Object {
        "bottom": 90,
      }
    }
    scrollEventThrottle={0.0001}
    style={
      Object {
        "flex": 1,
        "marginBottom": undefined,
      }
    }
  >
    <View>
      <Text
        style={
          Array [
            Object {
              "borderBottomWidth": 0,
              "color": "#505256",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "lineHeight": 24,
              "marginTop": 30,
              "paddingHorizontal": 36,
              "textAlign": "left",
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            null,
          ]
        }
      >
        Roge rules
      </Text>
    </View>
  </RCTScrollView>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#3CC8E6",
          "borderRadius": 50,
          "height": 48,
          "justifyContent": "center",
          "opacity": 1,
          "width": 650,
        }
      }
      testID="bottomButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Bold",
              "fontSize": 14,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Array [
              undefined,
            ],
          ]
        }
      >
        EDIT PRIVATE NOTES
      </Text>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`contact notes press bottom button saves and switches to not editing state 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -19,38 +19,13 @@
          \\"marginBottom\\": undefined,
        }
      }
    >
      <View>
-       <TextInput
-         allowFontScaling={true}
-         autoCorrect={true}
-         autoFocus={false}
-         blurOnSubmit={false}
-         editable={true}
-         multiline={true}
-         onChangeText={[Function onTextChanged]}
-         placeholderTextColor=\\"#505256\\"
-         rejectResponderTermination={true}
-         scrollEnabled={false}
-         selectionColor=\\"#005A7F\\"
+       <Text
          style={
            Array [
-             Object {
-               \\"backgroundColor\\": \\"transparent\\",
-               \\"borderBottomColor\\": \\"#3CC8E6\\",
-               \\"borderBottomWidth\\": 1,
-               \\"color\\": \\"#ffffff\\",
-               \\"fontFamily\\": \\"SourceSansPro-Regular\\",
-               \\"fontSize\\": 16,
-               \\"fontStyle\\": \\"normal\\",
-               \\"letterSpacing\\": 0.25,
-               \\"lineHeight\\": undefined,
-               \\"paddingVertical\\": 5,
-               \\"textAlignVertical\\": \\"center\\",
-               \\"textTransform\\": \\"none\\",
-             },
              Object {
                \\"borderBottomWidth\\": 0,
                \\"color\\": \\"#505256\\",
                \\"fontFamily\\": \\"SourceSansPro-Regular\\",
                \\"fontSize\\": 16,
@@ -60,15 +35,16 @@
                \\"paddingHorizontal\\": 36,
                \\"textAlign\\": \\"left\\",
                \\"textAlignVertical\\": \\"center\\",
                \\"textTransform\\": \\"none\\",
              },
+             null,
            ]
          }
-         underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-         value=\\"Roge rules\\"
-       />
+       >
+         Roge rules
+       </Text>
      </View>
    </RCTScrollView>
    <RCTSafeAreaView
      emulateUnlessSupported={true}
      style={
@@ -120,10 +96,10 @@
                undefined,
              ],
            ]
          }
        >
-         DONE
+         EDIT PRIVATE NOTES
        </Text>
      </View>
    </RCTSafeAreaView>
  </View>"
`;

exports[`contact notes press bottom button switches to editing state 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -19,13 +19,38 @@
          \\"marginBottom\\": undefined,
        }
      }
    >
      <View>
-       <Text
+       <TextInput
+         allowFontScaling={true}
+         autoCorrect={true}
+         autoFocus={false}
+         blurOnSubmit={false}
+         editable={true}
+         multiline={true}
+         onChangeText={[Function onTextChanged]}
+         placeholderTextColor=\\"#505256\\"
+         rejectResponderTermination={true}
+         scrollEnabled={false}
+         selectionColor=\\"#005A7F\\"
          style={
            Array [
+             Object {
+               \\"backgroundColor\\": \\"transparent\\",
+               \\"borderBottomColor\\": \\"#3CC8E6\\",
+               \\"borderBottomWidth\\": 1,
+               \\"color\\": \\"#ffffff\\",
+               \\"fontFamily\\": \\"SourceSansPro-Regular\\",
+               \\"fontSize\\": 16,
+               \\"fontStyle\\": \\"normal\\",
+               \\"letterSpacing\\": 0.25,
+               \\"lineHeight\\": undefined,
+               \\"paddingVertical\\": 5,
+               \\"textAlignVertical\\": \\"center\\",
+               \\"textTransform\\": \\"none\\",
+             },
              Object {
                \\"borderBottomWidth\\": 0,
                \\"color\\": \\"#505256\\",
                \\"fontFamily\\": \\"SourceSansPro-Regular\\",
                \\"fontSize\\": 16,
@@ -35,16 +60,15 @@
                \\"paddingHorizontal\\": 36,
                \\"textAlign\\": \\"left\\",
                \\"textAlignVertical\\": \\"center\\",
                \\"textTransform\\": \\"none\\",
              },
-             null,
            ]
          }
-       >
-         Roge rules
-       </Text>
+         underlineColorAndroid=\\"rgba(0,0,0,0)\\"
+         value=\\"Roge rules\\"
+       />
      </View>
    </RCTScrollView>
    <RCTSafeAreaView
      emulateUnlessSupported={true}
      style={
@@ -96,10 +120,10 @@
                undefined,
              ],
            ]
          }
        >
-         EDIT PRIVATE NOTES
+         DONE
        </Text>
      </View>
    </RCTSafeAreaView>
  </View>"
`;

exports[`contact notes press bottom button switches to editing state on android 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -14,18 +14,43 @@
      }
      scrollEventThrottle={0.0001}
      style={
        Object {
          \\"flex\\": 1,
-         \\"marginBottom\\": undefined,
+         \\"marginBottom\\": 80,
        }
      }
    >
      <View>
-       <Text
+       <TextInput
+         allowFontScaling={true}
+         autoCorrect={true}
+         autoFocus={false}
+         blurOnSubmit={false}
+         editable={true}
+         multiline={true}
+         onChangeText={[Function onTextChanged]}
+         placeholderTextColor=\\"#505256\\"
+         rejectResponderTermination={true}
+         scrollEnabled={false}
+         selectionColor=\\"#005A7F\\"
          style={
            Array [
+             Object {
+               \\"backgroundColor\\": \\"transparent\\",
+               \\"borderBottomColor\\": \\"#3CC8E6\\",
+               \\"borderBottomWidth\\": 1,
+               \\"color\\": \\"#ffffff\\",
+               \\"fontFamily\\": \\"SourceSansPro-Regular\\",
+               \\"fontSize\\": 16,
+               \\"fontStyle\\": \\"normal\\",
+               \\"letterSpacing\\": 0.25,
+               \\"lineHeight\\": undefined,
+               \\"paddingVertical\\": 5,
+               \\"textAlignVertical\\": \\"center\\",
+               \\"textTransform\\": \\"none\\",
+             },
              Object {
                \\"borderBottomWidth\\": 0,
                \\"color\\": \\"#505256\\",
                \\"fontFamily\\": \\"SourceSansPro-Regular\\",
                \\"fontSize\\": 16,
@@ -35,18 +60,15 @@
                \\"paddingHorizontal\\": 36,
                \\"textAlign\\": \\"left\\",
                \\"textAlignVertical\\": \\"center\\",
                \\"textTransform\\": \\"none\\",
              },
-             Object {
-               \\"paddingBottom\\": 80,
-             },
            ]
          }
-       >
-         Roge rules
-       </Text>
+         underlineColorAndroid=\\"rgba(0,0,0,0)\\"
+         value=\\"Roge rules\\"
+       />
      </View>
    </RCTScrollView>
    <RCTSafeAreaView
      emulateUnlessSupported={true}
      style={
@@ -98,10 +120,10 @@
                undefined,
              ],
            ]
          }
        >
-         EDIT PRIVATE NOTES
+         DONE
        </Text>
      </View>
    </RCTSafeAreaView>
  </View>"
`;
